# pre_sparse_mlir

./: .gitmodules  CMakeLists.txt  README.md
cmake/: Doxygen.cmake  utils.cmake
dnnl_brgemm/: CMakeLists.txt  microkernel.cpp  microkernel.hpp
matmul/: CMakeLists.txt  matmul_bench.cpp  spdm.h  spdm_bench.cpp
